--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,7 @@
 
 en:
   hello: "Hello world"
+  pundit:
+    default: 'You cannot perform this action.'
+    group_policy:
+      completed?: "You are part of this team please ask other team's member to do the same!"
